Add softprops' request to clarify what is meant by `standalone`

--- a/specs/comments.yml
+++ b/specs/comments.yml
@@ -7,6 +7,7 @@ overview: |
   closing delimiter.
 
   Comment tags SHOULD be treated as standalone when appropriate.
+  (A tag is "standalone" when it is the only non-whitespace token on a line.)
 tests:
   - name: Inline
     desc: Comment blocks should be removed from the template.
