--- a/specs/sections.yml
+++ b/specs/sections.yml
@@ -16,12 +16,9 @@ overview: |
     to a method with the given name.
     3) If the context is a hash, the data is the value associated with the
     name.
-    4) If the context is an object and the method with the given name has an
-    arity of 1, the method SHOULD be called with a String containing the
-    unprocessed contents of the sections; the data is the value returned.
-    5) Otherwise, the data is the value returned by calling the method with
-    the given name.
-    6) If any name parts were retained in step 1, each should be resolved
+    4) If the context is an object, the data is the method associated with
+    the name.  That method must have an arity of 1.
+    5) If any name parts were retained in step 1, each should be resolved
     against a context stack containing only the result from the former
     resolution.  If any part fails resolution, the result should be considered
     falsey, and should interpolate as the empty string.
@@ -31,7 +28,9 @@ overview: |
 
   For each element in the data list, the element MUST be pushed onto the
   context stack, the section MUST be rendered, and the element MUST be popped
-  off the context stack.
+  off the context stack.  If the element on the top of the context stack
+  is a method, the method SHOULD be called with a String containing the  
+  unprocessed contents of the sections; the data is the value returned.
 
   Section and End Section tags SHOULD be treated as standalone when
   appropriate.
