Correct the names of certain sections.

--- a/specs/crossreference.yml
+++ b/specs/crossreference.yml
@@ -10,13 +10,13 @@ xref:
     desc: Not currently in use.
   - name: '#'
     desc: Indicates the start of a section.
-    section: section
+    section: sections
   - name: '$'
     desc: Non-standard.  Define or Render a value.
-    section: templates
+    section: ~templates
   - name: '%'
     desc: Non-standard.  Influence the operation of the rendering engine.
-    section: pragmas
+    section: ~pragmas
   - name: '&'
     desc: Not currently in use.
   - name: "'"
@@ -38,14 +38,14 @@ xref:
     section: interpolation
   - name: '/'
     desc: Indicates the end of a section.
-    section: section
+    section: sections
   - name: ':'
     desc: Not currently in use.
   - name: ';'
     desc: Not currently in use.
   - name: '<'
     desc: Non-standard.  Define a template.
-    section: templates
+    section: ~templates
   - name: '='
     desc: Changes the tag delimiters for subsequent content.
     section: delimiters
@@ -65,7 +65,7 @@ xref:
     desc: Not currently in use.
   - name: '^'
     desc: Indicates the start of an inverted section.
-    section: section
+    section: sections
   - name: '_'
     desc: Not currently in use.
   - name: '`'
