--- a/specs/~pragmas.yml
+++ b/specs/~pragmas.yml
@@ -1,4 +1,63 @@
-depends_on: ['interpolation']
+depends_on: []
 overview: |
-  This is a placeholder.
+  A pragma specifies how a rendering engine should process its input.
+  They function as an in-band form of command-line option, specifying
+  behavior. In some cases they specify global behavior, while in other
+  cases they only affect a local section. They do not perform any
+  action in the language itself, but rather only a change in the
+  behavior of the rendering engine.
+
+  Pragmas are classifies according to the first word in their tag, where
+  a word is defined as any string of non-space characters. This
+  specification reserves and will only define pragmas whose first word
+  contains only lowercase characters.  Pragmas whose first word contains
+  only uppercase characters are reserved for particular implementations,
+  while mixed-case first words are reserved for future use.
 tests:
+  - name: The Version Pragma
+    desc: |
+      The version-string is one or more strings of digits, separated by
+      periods; for example 1 or 1.0 or 1.0.1.  The first set of digits
+      specifies the major release of the spec expected by a template.
+
+      If the rendering engine cannot interpret templates according to
+      the specified version of the spec, it SHOULD halt operation.
+    data: { }
+    template: '{{% version 1}}'
+    expected: ''
+
+  - name: The Requires Pragma
+    desc: |
+      The spec-string is one or more strings of characters, separated by
+      white-space.  Each string indicates a section of the spec that
+      the template expects the rendering engine to support.  Leading
+      '~' characters are not required and are ignored if present; this
+      allows optional portions of the spec to become required in later
+      versions.  Required portions of the spec are allowed, as they may
+      become optional in later versions.
+
+      A rendering engine is allowed to define private specs.  These should
+      use only uppercase characters in their name.
+
+      If the rendering engine does not recognize a spec, it SHOULD halt
+      operation.
+    data: { }
+    template: '{{% requires sections partials }}'
+    expected: ''
+
+  - name: The Warn Pragma
+    desc: |
+      The message string should be displayed, if possible, on an out-
+      of-band channel reserved for error messages.
+    data: { }
+    template: '{{% warn *** DRAFT:  DO NOT DISTRIBUTE *** }}'
+    expected: ''
+
+  - name: The Die Pragma
+    desc: |
+      The message string should be displayed, if possible, on an out-
+      of-band channel reserved for error messages.  Next, the rendering
+      engine SHOULD halt operation.
+    data: { }
+    template: '{{% die Required data is missing or not defined. }}'
+    expected: ''
